package System.Interfaces;

public interface Input {
    String getInput();
}
